# wwwfmt

./: Cargo.toml  LICENSE  README.md
assets/: example.html  example.js  example.min.html  example.prty.html  example.ts  example.tsx
src/: config.rs  css.rs  files.rs  fmt.rs  html.rs  javascript.rs  lib.rs  main.rs  tests.rs
